--- a/src/components/ImageCard/ImageCard.module.scss
+++ b/src/components/ImageCard/ImageCard.module.scss
@@ -6,6 +6,7 @@
   height: 230px;
   border-radius: 20px;
   overflow: hidden;
+  box-shadow: $box-shadow-button;
 
   .ButtonLike {
     position: absolute;
@@ -14,7 +15,7 @@
     width: 50px;
     height: 50px;
     background-color: #fff;
-    transition: background-color 0.2s ease-in-out;
+    transition: background-color, transform 0.2s ease-in-out;
     &:hover {
       background-color: $gray-input-main;
       transform: scale(116%);
