--- a/src/containers/HeaderSearch/HeaderSearch.module.scss
+++ b/src/containers/HeaderSearch/HeaderSearch.module.scss
@@ -6,6 +6,12 @@
   column-gap: 15px;
   justify-content: center;
   margin-bottom: 25px;
+  margin-top: 32px;
+
+  .HeaderGrow {
+    display: none;
+  }
+
   .ButtonSearch {
     background-color: $black-main;
     color: $black-contrastText;
@@ -15,6 +21,33 @@
     &:hover {
       background-color: $black-dark;
       box-shadow: $box-shadow-button;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .HeaderSearch {
+    z-index: 10000;
+    flex-direction: column;
+    margin-top: 0;
+
+    .HeaderGrow {
+      width: 100%;
+      height: 60px;
+      display: inline-block;
+    }
+
+    .ButtonSearch {
+      display: none;
+    }
+    .InputSearch {
+      position: absolute;
+      top: 0;
+      left: 0;
+      max-width: 100%;
+      .InputRootSearch {
+        border-radius: 0;
+      }
     }
   }
 }
